feat: navigator popup 구현 #1 - 문제 페이지 footer의 question버튼 클릭시 열림, 다시 누르면 닫힘 - 모달창 이외 범위 혹은 X버튼 클릭 시 닫힘 - 문제 번호 클릭 시 해당 문제로 이동

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,26 @@
 
 @font-face {
   font-family: "main";
-  src: url("/font/main.ttf");
+  src: url("/font/main-300.ttf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "main";
+  src: url("/font/main-400.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "main";
+  src: url("/font/main-500.ttf");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "main";
+  src: url("/font/main-700.ttf");
+  font-weight: 700;
 }
 
 @font-face {
